--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <receiver android:name=".OnBeerJsonDownload">
-                <intent-filter>
-                    <action android:name="BEERS_UPDATE"/>
-                    <category android:name="android.intent.category.DEFAULT"/>
-                </intent-filter>
+        <receiver android:name=".OnBeerJsonDownload" >
+            <intent-filter>
+                <action android:name="BEERS_UPDATE" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </receiver>
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -43,10 +45,7 @@
             android:exported="false" >
         </service>
 
-        <activity
-            android:name=".ShowBeerList"
-            android:label="@string/title_activity_show_beer_list"
-            android:theme="@style/AppTheme.NoActionBar" >
+        <activity android:name=".BeersWithRecycler" >
         </activity>
     </application>
 
