I'm seeing the late at the end of the tunnel ... I think i'm dead

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,8 @@
 
         <activity android:name=".BeersWithRecycler" >
         </activity>
+        <activity android:name=".ClubsInfo" >
+        </activity>
     </application>
 
 </manifest>
